[package]
name = "svp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.10.3"
dotenv = "0.15.0"
async-std = { version = "1.10.0", features = ["attributes", "tokio1"] }
regex = "1.9.1"
cynic = { version = "3", features = ["http-surf"] }
surf = "2"
async-trait = "0.1.72"
sled = "0.34.7"

[build-dependencies]
cynic-codegen = { version = "3" }
